tests/sumo/tls/wauts/errors/cross3ltl_error_unknown_to_prog/errors.sumo
Warning: Missing green phase in tlLogic '0', program 'S1' for tl-index 4.
Warning: Missing green phase in tlLogic '0', program 'S2' for tl-index 0.
Error: Can not switch tls '0' to program 'x';
 The program is not known.
Quitting (on error).
